// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImngODataGridDirective should create an instance 1`] = `Object {}`;

exports[`ImngODataGridDirective should fire AfterViewInit 1`] = `
Object {
  "data": Object {},
  "dataStateChange": Observable {
    "_subscribe": [Function],
  },
  "filter": Object {
    "filters": Array [],
    "logic": "and",
  },
  "filterable": "menu",
  "loading": false,
  "navigable": true,
  "pageSize": 20,
  "pageable": false,
  "reorderable": true,
  "resizable": true,
  "skip": 0,
  "sort": Array [],
  "sortable": Object {
    "allowUnsort": true,
    "mode": "multiple",
  },
}
`;

exports[`ImngODataGridDirective should fire OnInit 1`] = `
Object {
  "filterable": "menu",
  "loading": true,
  "navigable": true,
  "reorderable": true,
  "resizable": true,
  "sortable": Object {
    "allowUnsort": true,
    "mode": "multiple",
  },
}
`;
